--- a/Actividad 3.01.04/refranes-1-plantilla/refranes-1.html
+++ b/Actividad 3.01.04/refranes-1-plantilla/refranes-1.html
@@ -7,18 +7,18 @@
 </head>
 
 <body>
-  Refranes sobre educación
+  <h1>Refranes sobre educación</h1>
 
-  A hacer y deshacer llaman aprender.
+  <p class="a">A hacer y deshacer llaman aprender.</p>
 
-  Para aprender, lo principal es querer.
+  <p class="b">Para aprender, lo principal es querer.</p>
 
-  Quien bien atiende, bien aprende si, además de oír, entiende.
+  <p class="c">Quien bien atiende, bien aprende si, además de oír, entiende.</p>
 
-  Desde San Lucas (18 de octubre) a Navidad, hay pocos estudiantes de verdad.
+  <p class="d">Desde San Lucas (18 de octubre) a Navidad, hay pocos estudiantes de verdad.</p>
 
-  Estudiante memorista, loro a simple vista.
+  <p class="e">Estudiante memorista, loro a simple vista.</p>
 
-  Para ser maestros poco sabemos; pero enseñando aprendemos.
+  <p class="f">Para ser maestros poco sabemos; pero enseñando aprendemos.</p>
 </body>
 </html>
