--- a/Actividad 3.01.04/citas-dijkstra-plantilla/citas-dijkstra.html
+++ b/Actividad 3.01.04/citas-dijkstra-plantilla/citas-dijkstra.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="utf-8">
   <title>Juan Laguna Quero</title>
@@ -7,20 +8,27 @@
 </head>
 
 <body>
-  Citas de Edsger Dijkstra
+  <h1>Citas de Edsger Dijkstra</h1>
 
-  Edsger Wybe Dijkstra (1930 – 2002), informático holandés ganador del premio Turing en 1972, fue un  pionero y paladín de la programación estructurada.
+  <p class="negro">Edsger Wybe Dijkstra (1930 – 2002), informático holandés ganador del premio Turing en 1972, fue
+    un pionero y paladín de la programación estructurada.</p>
 
-  La programación orientada a objetos es una idea excepcionalmente mala que sólo puede tener su origen en California.
+  <p class="rojo">La programación orientada a objetos es una idea excepcionalmente mala que sólo puede tener su origen
+    en California.</p>
 
-  Si dentro de 10 años, cuando estés haciendo algo rápido y mal hecho, de repente sientes que estoy viendo lo que haces y te dices a ti mismo "Esto no le hubiera gustado a Dijkstra", bueno, me conformo con ese tipo de inmortalidad.
+  <p class="marron">Si dentro de 10 años, cuando estés haciendo algo rápido y mal hecho, de repente sientes que estoy
+    viendo lo que haces
+    y te dices a ti mismo "Esto no le hubiera gustado a Dijkstra", bueno, me conformo con ese tipo de inmortalidad.</p>
 
-  La Informática no se ocupa de los ordenadores más de lo que la Astronomía se ocupa de los telescopios.
+  <p class="azul">La Informática no se ocupa de los ordenadores más de lo que la Astronomía se ocupa de los telescopios.
+  </p>
 
-  Perfeccionarse uno mismo consiste tanto en aprender como en desaprender.
+  <p class="rojo">Perfeccionarse uno mismo consiste tanto en aprender como en desaprender.</p>
 
-  Preguntarse si un ordenador piensa es tan interesante como preguntarse si un submarino nada.
+  <p class="marron">Preguntarse si un ordenador piensa es tan interesante como preguntarse si un submarino nada.</p>
 
-  La misión de la Universidad no es ofrecer lo que la sociedad pide, sino proporcionar lo que la sociedad necesita.
+  <p class="azul">La misión de la Universidad no es ofrecer lo que la sociedad pide, sino proporcionar lo que la
+    sociedad necesita.</p>
 </body>
+
 </html>
