--- a/Actividad 3.01.04/greguerias-1-plantilla/greguerias-1.html
+++ b/Actividad 3.01.04/greguerias-1-plantilla/greguerias-1.html
@@ -9,20 +9,20 @@
 <body>
   <h1>Greguerías de Ramón Gómez de la Serna</h1>
 
-  <p class="prim">Cuando anuncian por el altavoz que se ha perdido un niño, siempre pienso que ese niño soy yo.</p>
+  <p class="blanco">Cuando anuncian por el altavoz que se ha perdido un niño, siempre pienso que ese niño soy yo.</p>
 
-  <p class="seg">Las golondrinas son pájaros vestidos de etiqueta.</p>
+  <p class="rosilla">Las golondrinas son pájaros vestidos de etiqueta.</p>
 
-  <p class="ter">El escritor quiere escribir su mentira y escribe su verdad.</p>
+  <p class="marron">El escritor quiere escribir su mentira y escribe su verdad.</p>
 
-  <p class="prim">El niño grita: "¡No vale!"... "¡Dos contra uno!", y no sabe que toda la vida es eso: dos contra uno.</p>
+  <p class="blanco">El niño grita: "¡No vale!"... "¡Dos contra uno!", y no sabe que toda la vida es eso: dos contra uno.</p>
 
-  <p class="ter">El libro es un pájaro con más de cien alas para volar.</p>
+  <p class="marron">El libro es un pájaro con más de cien alas para volar.</p>
 
-  <p class="cuarta">Los ceros son los huevos de los que salieron las demás cifras.</p>
+  <p class="rosa">Los ceros son los huevos de los que salieron las demás cifras.</p>
 
-  <p class="seg">Al callarse la chicharra de pronto, parece que ha habido una avería eléctrica.</p>
+  <p class="rosilla">Al callarse la chicharra de pronto, parece que ha habido una avería eléctrica.</p>
 
-  <p class="cuarta">El 6 es el número que va a tener familia.</p>
+  <p class="rosa">El 6 es el número que va a tener familia.</p>
 </body>
 </html>
